--- a/app/assets/stylesheets/custom_boxes.sass
+++ b/app/assets/stylesheets/custom_boxes.sass
@@ -13,6 +13,13 @@
   .field
     margin: 5px 0
 
+#edit-boxes
+  background-color: #da4f49
+  color: white
+  padding: 6px 12px 5px 10px
+  margin-top: 18px
+  float: right
+
 //#boxes-link
   color: #666!important
 
