Change existing pages with box design

--- a/app/assets/stylesheets/box_client.css.sass
+++ b/app/assets/stylesheets/box_client.css.sass
@@ -6,6 +6,7 @@
   height: auto
 
   .client-content
+    float: left
     width: $box-width-3x
     padding: $gutter
     padding-right: 0
@@ -14,6 +15,8 @@
       margin-top: 0
 
   .client-aside
+    float: right
+    box-sizing: border-box
     width: $box-width
     padding: 30px 20px
 
