--- a/app/views/boxes/_staff.slim
+++ b/app/views/boxes/_staff.slim
@@ -1,4 +1,4 @@
-.box.box-staff
+.box.box-staff data-id=boxable.id
   a.route href="/staff"
     .mini
       .staff-thumb style="background-image: url(#{boxable.image_url})"
