Modify js route, load page by url via ajax

--- a/app/views/boxes/_client.slim
+++ b/app/views/boxes/_client.slim
@@ -1,4 +1,4 @@
-.box.box-client.box-expandable class="#{'box-expanded' if box.expanded?}" data-id=boxable.id data-ss-colspan="#{box.expanded && box.expand_cols ? box.expand_cols : 1}"
+.box.box-client.box-expandable class="#{'box-expanded' if box.expanded?}" data-box-id=box.id data-id=boxable.id data-ss-colspan="#{box.expanded && box.expand_cols ? box.expand_cols : 1}"
   .mini
     a.route.box-link href=box.url
       .client-logo
