Completed destroy box feature

--- a/app/views/boxes/_service.slim
+++ b/app/views/boxes/_service.slim
@@ -1,4 +1,4 @@
-.box.box-service
+.box.box-service id="box-#{box.id}"
   a class="box-link" href="/services"
     .mini
       .box-hover-content style="border-color: #{boxable.color}"
