--- a/app/assets/stylesheets/custom_boxes.sass
+++ b/app/assets/stylesheets/custom_boxes.sass
@@ -19,6 +19,18 @@
   padding: 6px 12px 5px 10px
   margin-top: 18px
   float: right
+  cursor: pointer
+
+.box
+  .remove-box-icon
+    top: 0
+    right: 0
+    position: absolute
+    font-size: 33px
+    color: #da4f49
+    margin-top: -16px
+    margin-right: -13px
+    cursor: pointer
 
 //#boxes-link
   color: #666!important
