--- a/app/views/boxes/_custombox.slim
+++ b/app/views/boxes/_custombox.slim
@@ -1,2 +1,2 @@
-.box.box-statical style="width:#{boxable.width * 279 + (boxable.width - 1) * 20}px; height:#{boxable.height * 288 + (boxable.height - 1) * 20}px"
+.box.box-statical id="box-#{box.id}" style="width:#{boxable.width * 279 + (boxable.width - 1) * 20}px; height:#{boxable.height * 288 + (boxable.height - 1) * 20}px"
   =raw boxable.content
