--- a/app/views/boxes/_technology.slim
+++ b/app/views/boxes/_technology.slim
@@ -1,4 +1,4 @@
-.box.box-tech
+.box.box-tech id="box-#{box.id}"
   a.route.box-link href="/technologies"
     .tech-title target="_blank"
       = image_tag boxable.image_url
