Complete box expand/collapse
* Add box_tag helper
* Refactor box template to fit expand/collapse
* Modify javascript

--- a/app/assets/stylesheets/box.css.sass
+++ b/app/assets/stylesheets/box.css.sass
@@ -1,5 +1,6 @@
 .box
   position: absolute
+  display: block
   width: $box-width
   height: $box-height
   margin-bottom: $gutter
@@ -7,6 +8,7 @@
   text-align: center
   overflow: hidden
   box-shadow: 0 1px 5px rgba(black, .1)
+  color: $color-font
 
   > .box-link
     display: block
