--- a/app/views/refinery/_header.html.slim
+++ b/app/views/refinery/_header.html.slim
@@ -16,7 +16,7 @@
           li
             a.route href="/technologies" TECHNOLOGIES
           li
-            a.route href="/staff" STAFF
+            a.route href="/golden" GOLDEN
           li.last
             a.route href="/blog" BLOG
 
