--- a/app/views/boxes/_about.html.slim
+++ b/app/views/boxes/_about.html.slim
@@ -1,3 +1,3 @@
-.box.box-double.box-about data-ss-colspan="2"
+= box_tag box, class: %w[box-double box-about], cols: 2
   h3 About ShineNext
   p We are a software company and a community of passionate, purpose-led individuals. We think disruptively to deliver technology to address our clients' toughest challenges, all while seeking to revolutionize the IT industry and create positive social change.
