--- a/app/views/boxes/_service.slim
+++ b/app/views/boxes/_service.slim
@@ -1,9 +1,13 @@
-.box.box-service
-  a class="box-link" href="/services"
-    .mini
-      .box-hover-content style="border-color: #{boxable.color}"
-      i class="icon icon-#{boxable.icon}" style="color: #{boxable.color}"
-      h3 style="color: #{boxable.color}"
-        = boxable.title
-      p
-        = boxable.short_content
+= box_tag box, expandable: true, expand_cols: 2 do
+  .mini
+    .box-hover-content style="border-color: #{boxable.color}"
+    i class="icon icon-#{boxable.icon}" style="color: #{boxable.color}"
+    h3 style="color: #{boxable.color}"
+      = boxable.title
+    p
+      = boxable.short_content
+  - if box.url.blank?
+    .maxi
+      i.icon class="icon-#{boxable.icon}" style="color: #{boxable.color}"
+      h2 style="color: #{boxable.color}" = boxable.title
+      = boxable.content.html_safe
