--- a/app/views/refinery/_header.html.slim
+++ b/app/views/refinery/_header.html.slim
@@ -2,7 +2,7 @@
   .header
     .container
       .logo
-        a href="#" Shinetech
+        a href="#" ShineNeXT
 
       /= render partial: "/refinery/menu", locals: {dom_id: 'menu', css: 'menu'}
       nav#menu.menu
