Adjust box-staff css

--- a/app/assets/stylesheets/box_staff.css.sass
+++ b/app/assets/stylesheets/box_staff.css.sass
@@ -23,7 +23,10 @@
   background: $main-color
 
 .staff-info
-  padding: 10px
+  float: right
+  box-sizing: border-box
+  width: $box-width
+  padding: 10px 10px 10px 0
 
 .staff-description
   display: inline
