comment div of add box and edit boxes

--- a/app/views/refinery/_header.html.slim
+++ b/app/views/refinery/_header.html.slim
@@ -20,7 +20,7 @@
           li.last
             a.route href="/blog" BLOG
 
-      - if current_refinery_user.present?
+      /- if current_refinery_user.present?
         div#edit-boxes
           span EDIT
           | &nbsp;&nbsp;
