Adjust comment with us position

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -21,5 +21,6 @@ html
     .container
       = render 'home/footer'
 
-    .container
-      = render '/home/guest_book'
+    .fixed-bottom
+      .container
+        = render '/home/guest_book'
