--- a/app/assets/stylesheets/message.sass
+++ b/app/assets/stylesheets/message.sass
@@ -1,19 +1,20 @@
+.fixed-bottom
+  @include position(fixed, 0 0px 0px 0px)
+
+  .container
+    position: relative
+
 #guest-book
-  z-index: 100
+  position: absolute
+  bottom: 0px
+  right: -50px
+  padding: 10px 10px 7px 10px
   width: 265px
   font-weight: bold
-  position: fixed
-  bottom: 0px
-  right: 10px
   background: $main-color none repeat scroll 0 0
   color: #fff
-  padding: 10px
-  padding-bottom: 7px
-  border-top-left-radius: 5px
-  border-top-right-radius: 5px
-  -moz-border-top-left-radius: 5px
-  -moz-border-top-right-radius: 5px
-
+  z-index: 9999
+  border-radius: 5px 5px 0 0
 
   #guest-form
     background-color: white
@@ -25,6 +26,11 @@
       width: 125px
     textarea
       width: 225px
+
     #message_submit
       margin-top: 10px
       margin-left: 100px
+
+@media screen and (max-width: $box-width-4x + 100px)
+  #guest-book
+    right: 0
