--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -22,6 +22,7 @@
 @import box_client
 @import custom_boxes
 @import message
+@import 404
 @import dropdown_tag
 @import mobile
 @import jquery.tagsinput
