completed double top browser to display header

--- a/app/assets/stylesheets/base.sass
+++ b/app/assets/stylesheets/base.sass
@@ -57,7 +57,8 @@ a
   @include position(fixed, 0px 0px 0 0px)
   @include linear-gradient(to top, #a5cad6, darken(#a5cad6, 10%))
   margin: 0
-  height: 0
+  display: none
+  height: 254px
   color: white
   overflow: hidden
   box-shadow: 0 2px 5px rgba(black, .5)
