change 404 page to boxset style

--- a/app/views/refinery/pages/404.slim
+++ b/app/views/refinery/pages/404.slim
@@ -1,9 +1,7 @@
-#dialog
-  #dialog-inner
-    h1 Page not found. (404 Error)
-    p Sorry, we couldn’t find the page you were looking for.
-    p
-      |You can make a fresh start at 
-      a href="/" home page
-      |. Or go somewhere else.
-
+.box.box-double.box-about
+  h3 Page not found. (404 Error)
+  p
+    | Sorry, we couldn’t find the page you were looking for.
+    | You can make a fresh start at 
+    a.route href="/" home page
+    | . Or go somewhere else.
