--- a/app/assets/stylesheets/base.sass
+++ b/app/assets/stylesheets/base.sass
@@ -58,22 +58,28 @@ a
   @include linear-gradient(to top, #a5cad6, darken(#a5cad6, 10%))
   margin: 0
   display: none
-  height: 254px
+  height: 180px
   color: white
   overflow: hidden
   box-shadow: 0 2px 5px rgba(black, .5)
   z-index: 9000
 
   h1
-    margin-top: 50px
+    margin-top: 35px
+    margin-bottom: 0px
+    padding-bottom: 10px
     color: white
     font-size: 50px
     line-height: 50px
     border: 0
     text-shadow: 1px 1px 5px rgba(#333, .5)
-
   p
     margin-bottom: 50px
+  .icon-remove
+    position: absolute
+    top: 18px
+    right: 22px
+    font-size: 24px
 
 .container
   margin: 0 auto
