--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,7 +9,7 @@ html
     .masthead
       .container
         h1 ShineNeXT
-        i.icon-remove
+        i.icon-remove.pointer
         p Welcome to Shinetech Wuhan. Our clients are solving some of the most pressing problems of our time. We deliver disruptive thinking and empowering technology to help them succeed.
     = render 'common/message'
     = render '/refinery/header'
