--- a/app/assets/stylesheets/base.sass
+++ b/app/assets/stylesheets/base.sass
@@ -106,13 +106,14 @@ a
 
 .logo
   float: left
+  font-weight: bold
 
   a
     display: block
     height: 70px
     line-height: 70px
     margin-right: 30px
-    font-size: 20px
+    font-size: 17px
     color: $color-font
 
 #menu
@@ -128,9 +129,8 @@ a
 
     a
       display: block
-      padding: 0 12px
+      padding: 2px 12px
       color: lighten($color-font, 20%)
-      font-size: 16px
       @include transition(all .5s)
 
       &:hover
