magnify log font size

--- a/app/assets/stylesheets/base.sass
+++ b/app/assets/stylesheets/base.sass
@@ -113,14 +113,14 @@ a
     height: 70px
     line-height: 70px
     margin-right: 30px
-    font-size: 17px
+    font-size: 24px
     color: $color-font
 
 #menu
   float: left
   margin: 0 auto
   height: $header-height
-  line-height: $header-height
+  line-height: $header-height + 5px
   color: $color-font
   text-transform: uppercase
 
