Completed edit page feature and fix boxes align center

--- a/app/assets/stylesheets/mobile.sass
+++ b/app/assets/stylesheets/mobile.sass
@@ -27,3 +27,16 @@
 @media screen and (max-width: 500px)
   #menu li a
     font-size: 10px
+
+//algin center boxes
+@media screen and (max-width: $box-width-4x - 1)
+  #box-container
+    width: $box-width-3x
+
+@media screen and (max-width: $box-width-3x - 1)
+  #box-container
+    width: $box-width-2x
+
+@media screen and (max-width: $box-width-2x - 1)
+  #box-container
+    width: $box-width
