--- a/app/assets/stylesheets/custom_boxes.sass
+++ b/app/assets/stylesheets/custom_boxes.sass
@@ -13,13 +13,21 @@
   .field
     margin: 5px 0
 
-#edit-boxes
+.edit-button
+  font-size: 12px
   background-color: #da4f49
   color: white
-  padding: 6px 12px 5px 10px
-  margin-top: 18px
+  padding: 3px 12px 3px 10px
+  margin-top: 20px
+  margin-left: 12px
   float: right
   cursor: pointer
+#editPagesModal
+  font-size: 16px
+  .clear
+    clear: both
+  .hr
+    border-bottom: 1px solid #ddd
 
 .box
   .remove-box-icon
