--- a/app/assets/stylesheets/custom_boxes.sass
+++ b/app/assets/stylesheets/custom_boxes.sass
@@ -30,9 +30,8 @@
     border-bottom: 1px solid #ddd
 
 .box
-  .remove-box-icon
+  .set-url-icon, .remove-box-icon
     top: 0
-    right: 0
     position: absolute
     font-size: 33px
     color: #da4f49
@@ -40,6 +39,11 @@
     margin-right: -13px
     cursor: pointer
 
+  .remove-box-icon
+    right: 0
+
+  .set-url-icon
+    right: 33px
 //#boxes-link
   color: #666!important
 
