--- a/app/views/refinery/pages/404.slim
+++ b/app/views/refinery/pages/404.slim
@@ -1,4 +1,4 @@
-.box.box-double.box-about
+.box.box-double.box-about.box-404
   h3 Page not found. (404 Error)
   p
     | Sorry, we couldn’t find the page you were looking for.
