--- a/app/views/refinery/_header.html.slim
+++ b/app/views/refinery/_header.html.slim
@@ -49,6 +49,13 @@
         .field.pull-right
           = f.submit "Create Page"
 
+  #editBoxesModal.modal.hide.fade tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"
+    .modal-header
+      a.pull-right.close.pointer data-dismiss="modal" aria-hidden="true" style="color:#ccc!important"
+        i.icon-remove
+      h3 Please select redirect URL.
+    .modal-body
+
       /.dropdown.dropdown-tag
       /  a.dropdown-toggle data-toggle="dropdown" href="#"
       /    span
