add custom box type

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -20,6 +20,7 @@
 @import box_tech
 @import box_service
 @import box_client
+@import box_custom
 @import custom_boxes
 @import message
 @import dropdown_tag
