improve staff page

--- a/app/assets/stylesheets/box_staff.css.sass
+++ b/app/assets/stylesheets/box_staff.css.sass
@@ -26,13 +26,15 @@
 .maxi
   .staff-thumb
     margin-right: 20px
-    margin-bottom: 10px
 
 .staff-info
   //float: right
   box-sizing: border-box
   //width: $box-width
   padding: 10px 20px
+
+.staff-score
+  height: 28px
 
 .staff-description
   text-align: left
