--- a/app/views/boxes/_custom.slim
+++ b/app/views/boxes/_custom.slim
@@ -1,2 +1,3 @@
 = box_tag box, "data-ss-colspan" => boxable.width.to_s, style: "height: #{boxable.real_height}; width: #{boxable.real_width};" do
-  =raw boxable.content
+  .box-custom-inner
+    =raw boxable.content
