--- a/app/views/boxes/_staff.slim
+++ b/app/views/boxes/_staff.slim
@@ -8,6 +8,9 @@
         .staff-name = boxable.name
       .staff-info
         h2 = boxable.name
+        .staff-score
+          - 5.times do
+            i.icon-star
         .staff-description =raw boxable.description
         .social-links
           - if boxable.github_url?
