--- a/app/views/boxes/_staff.slim
+++ b/app/views/boxes/_staff.slim
@@ -4,7 +4,7 @@
       .staff-name = boxable.name
   - if box.url.blank?
     .maxi
-      .staff-thumb style="background-image: url('#{boxable.image_url}');"
+      .staff-thumb style="background-image: url('#{boxable.second_image_url||boxable.image_url}');"
         .staff-name = boxable.name
       .staff-info
         h2 = boxable.name
