add quote on staff

--- a/app/assets/stylesheets/box_staff.css.sass
+++ b/app/assets/stylesheets/box_staff.css.sass
@@ -36,6 +36,10 @@
 .staff-score
   height: 28px
 
+.staff-quote
+  margin-top: 7px
+  font-weight: bold
+
 .staff-description
   text-align: left
   display: inline
