--- a/app/views/boxes/_staff.slim
+++ b/app/views/boxes/_staff.slim
@@ -19,7 +19,7 @@
           - if boxable.email?
             a href="mailto:#{boxable.email}" target="_blank": i.icon.icon-envelope &nbsp;Email
           - if boxable.cv_url?
-            a href="#{boxable.cv_url}" target="_blank": i.icon-external-link.icon-large &nbsp;CV
+            a href="#{boxable.cv_url}" target="_blank": i.icon-file-text-alt.icon-large &nbsp;CV
           - if boxable.github_url?
             a href="#{boxable.github_url}" target="_blank": i.icon-github.icon-large &nbsp;Github
           - if boxable.linkedin_url?
