bottom staff description

--- a/app/assets/stylesheets/box_staff.css.sass
+++ b/app/assets/stylesheets/box_staff.css.sass
@@ -33,9 +33,6 @@
   //width: $box-width
   padding: 10px 20px
 
-.staff-score
-  height: 28px
-
 .staff-quote
   margin-top: 7px
   font-weight: bold
@@ -43,6 +40,8 @@
 .staff-description
   text-align: left
   display: inline
+  top: 10px
+  position: relative
 
 .social-links
   margin-top: 20px
