--- a/app/assets/stylesheets/box_staff.css.sass
+++ b/app/assets/stylesheets/box_staff.css.sass
@@ -1,8 +1,13 @@
 .box-staff
   &.box-expanded
-    min-height: $box-height
-    height: auto
-    width: $box-width-2x
+    height: $box-height
+    min-width: $box-width-2x
+    width: auto
+
+    //width: $box-width-2x
+    //min-height: $box-height
+    //height: auto
+
 
 .staff-thumb
   float: left
