improve staff page UI

--- a/app/assets/stylesheets/box_staff.css.sass
+++ b/app/assets/stylesheets/box_staff.css.sass
@@ -1,19 +1,40 @@
 .box-staff
   &.box-expanded
-    height: $box-height
-    min-width: $box-width-2x
-    width: auto
+    min-height: $box-height
+    width: $box-width-4x
+    height: auto
 
-    //width: $box-width-2x
-    //min-height: $box-height
-    //height: auto
+  .maxi
+    .staff-thumb
+      top: 0
+      right: 0
+      position: absolute
 
+    h1
+      margin: 15px 0
+      float: left
+      padding-right: 20px
+      margin: 0px
+      font-size: 50px
+      border-bottom: 0
+
+    .staff-info-inner
+      height: 50px
+      border-bottom: 1px solid #666
+      padding-top: 10px
+      padding-bottom: 20px
+      margin-bottom: 5px
 
 .staff-thumb
-  float: left
   width: $box-width
   height: $box-height
   background-size: cover
+
+.staff-base-info
+  width: $box-width
+  height: $box-height
+  vertical-align: middle
+  display: table-cell
 
 .staff-name
   position: absolute
@@ -28,28 +49,28 @@
 .staff-thumb:hover .staff-name
   background: $main-color
 
-.maxi
-  .staff-thumb
-    margin-right: 20px
-
 .staff-info
-  //float: right
   box-sizing: border-box
-  //width: $box-width
+  text-align: left
   padding: 10px 20px
+  width: $box-width-3x
 
 .staff-quote
-  margin-top: 7px
   font-weight: bold
 
 .staff-description
-  text-align: left
-  display: inline
-  top: 10px
-  position: relative
+  margin-top: -20px
+  line-height: 1.5
+  font-size: 25px
+  font-family: "Quintessential",cursive
 
 .social-links
-  margin-top: 20px
+  margin-top: 7px
+  ul
+    display: inline-block
+  li
+    float: left
+    text-align: center
 
   a
     margin: 0 5px
