--- a/app/views/boxes/_staff.slim
+++ b/app/views/boxes/_staff.slim
@@ -1,32 +1,20 @@
-= box_tag box, expandable: true, expand_cols: 2 do
+= box_tag box, expandable: true, expand_cols: 4 do
   .mini
     .staff-thumb style="background-image: url('#{boxable.image_url}');"
       .staff-name = boxable.name
   - if box.url.blank?
     .maxi
-      .staff-thumb style="background-image: url('#{boxable.second_image_url||boxable.image_url}');"
-        .staff-name = boxable.name
       .staff-info
-        h2 = boxable.name
-        .staff-score
-          - 5.times do
-            i.icon-star
-        - if boxable.quote?
-          .staff-quote
-            = "$#{boxable.quote}/hour"
-        .staff-description =raw boxable.description
+        .staff-info-inner
+          h1 = boxable.name
+          .staff-score
+            - 5.times do
+              i.icon-star
+          - if boxable.quote?
+            .staff-quote
+              = "$#{boxable.quote}/hour"
         .social-links
-          - if boxable.email?
-            a href="mailto:#{boxable.email}" target="_blank": i.icon.icon-envelope &nbsp;Email
-          - if boxable.cv_url?
-            a href="#{boxable.cv_url}" target="_blank": i.icon-file-text-alt.icon-large &nbsp;CV
-          - if boxable.github_url?
-            a href="#{boxable.github_url}" target="_blank": i.icon-github.icon-large &nbsp;Github
-          - if boxable.linkedin_url?
-            a href="#{boxable.linkedin_url}" target="_blank": i.icon-linkedin.icon-large &nbsp;LinkedIn
-          - if boxable.facebook_url?
-            a href="#{boxable.facebook_url}" target="_blank": i.icon-facebook.icon-large &nbsp;Facebook
-          - if boxable.twitter_url?
-            a href="#{boxable.twitter_url}" target="_blank": i.icon-twitter.icon-large &nbsp;Twitter
-          - if boxable.weibo_url?
-            a href="#{boxable.weibo_url}" target="_blank": i.icon-weibo.icon-large &nbsp;Weibo
+            = render 'boxes/staff_links', boxable: boxable
+        .staff-description
+          = raw boxable.description
+      .staff-thumb style="background-image: url('#{boxable.second_image_url||boxable.image_url}');"
