--- a/app/assets/stylesheets/box_staff.css.sass
+++ b/app/assets/stylesheets/box_staff.css.sass
@@ -17,6 +17,7 @@
       padding-top: 3px
       margin: 0px
       font-size: 40px
+      color: #555
       border-bottom: 0
 
     .staff-info-inner
