add signature in staff

--- a/app/assets/stylesheets/box_staff.css.sass
+++ b/app/assets/stylesheets/box_staff.css.sass
@@ -27,6 +27,19 @@
       padding-bottom: 5px
       margin-bottom: 5px
 
+      .staff-signature
+        line-height: 0
+        float: right
+        display: inline
+        font-family: "Quintessential",cursive
+        top: -32px
+        position: relative
+        font: right
+        font-weight: bold
+        font-size: 15px
+        p
+          line-height: 0.7
+
 .staff-thumb
   width: $box-width
   height: $box-height
@@ -50,6 +63,7 @@
 
 .staff-score
   font-size: 12px
+  float: left
 
 .staff-thumb:hover .staff-name
   background: $main-color
@@ -64,6 +78,7 @@
   font-weight: bold
   font-size: 13px
   margin-top: -4px
+  float: left
 
 .staff-description
   line-height: 1.5
