--- a/app/views/refinery/_header.html.slim
+++ b/app/views/refinery/_header.html.slim
@@ -56,6 +56,14 @@
       h3 Please select redirect URL.
     .modal-body
 
+  #downloadCVModal.modal.hide.fade tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"
+    .modal-header
+      a.pull-right.close.pointer data-dismiss="modal" aria-hidden="true" style="color:#ccc!important"
+        i.icon-remove
+      h3 Please remain your Phone number or Email before dowload CV.
+    .modal-body
+
+
       /.dropdown.dropdown-tag
       /  a.dropdown-toggle data-toggle="dropdown" href="#"
       /    span
