--- a/app/views/refinery/_header.html.slim
+++ b/app/views/refinery/_header.html.slim
@@ -60,7 +60,7 @@
     .modal-header
       a.pull-right.close.pointer data-dismiss="modal" aria-hidden="true" style="color:#ccc!important"
         i.icon-remove
-      h3 Please remain your Phone number or Email before dowload CV.
+      h3 Please remain your information before dowload CV.
     .modal-body
 
 
