--- a/app/views/home/_guest_book.slim
+++ b/app/views/home/_guest_book.slim
@@ -4,13 +4,24 @@
     i.icon-chevron-up.pull-right#toogle-guest
   #guest-form.hide
     = form_for Refinery::Messages::Message.new, url: '/messages', remote: true do |f|
-      = f.label 'Your Name:'
+      = f.label 'Your Name*'
       .field
         = f.text_field :name
-      = f.label 'Your email:'
+
+      = f.label 'Your Company*'
+      .field
+        = f.text_field :company
+
+      = f.label 'Your email*'
       .field
         = f.text_field :email
-      = f.label 'Content:'
+
+      = f.label 'Your phone number'
       .field
-        = f.text_area :content, rows: 8
+        = f.text_field :phone_number
+
+      = f.label 'Content*'
+      .field
+        = f.text_area :content, rows: 5
+
       =f.submit 'Submit', id: 'message_submit', disable_with: "loading..."
