add select expanded feature when admin create box

--- a/app/assets/stylesheets/custom_boxes.sass
+++ b/app/assets/stylesheets/custom_boxes.sass
@@ -12,6 +12,9 @@
 #newBoxModal
   .field
     margin: 5px 0
+  form
+    text-align: left
+    padding-left: 30px
 
 .edit-button
   font-size: 12px
