--- a/app/assets/stylesheets/box_client.css.sass
+++ b/app/assets/stylesheets/box_client.css.sass
@@ -8,7 +8,7 @@
   .client-content
     float: left
     box-sizing: border-box
-    width: $box-width-3x
+    max-width: $box-width-3x
     padding: $gutter
     padding-right: 0
 
