--- a/app/assets/stylesheets/box_staff.css.sass
+++ b/app/assets/stylesheets/box_staff.css.sass
@@ -72,6 +72,7 @@
   box-sizing: border-box
   text-align: left
   padding: 10px 20px
+  max-width: $box-width-2x
 
 .staff-quote
   font-weight: bold
