--- a/app/assets/stylesheets/variables.css.sass
+++ b/app/assets/stylesheets/variables.css.sass
@@ -1,7 +1,7 @@
 //$main-color: #0099cc
 $main-color: #00aff0
 
-$color-bg: #E7F1F5
+$color-bg: rgb(246, 246, 242)
 $color-link: #009ce0
 $color-font: #535b60
 $color-heading: #121b21
