fix bug of change box type

--- a/app/views/common/_modals.slim
+++ b/app/views/common/_modals.slim
@@ -36,3 +36,27 @@
       i.icon-remove
     h3
   .modal-body
+
+- if current_refinery_user.present?
+  #newBoxModal.modal.hide.fade tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"
+    .modal-header
+      a.pull-right.close.pointer data-dismiss="modal" aria-hidden="true" style="color:#ccc!important"
+        i.icon-remove
+      h3 Please select box's type and name...
+    .modal-body
+      = form_for Box.new, url: '/boxes', method: 'post' do |f|
+        .field
+          = f.label :boxable_type, "Box type"
+          | &nbsp;&nbsp;
+          = f.select :boxable_type, Box::BOXABLE_TYPES.collect{|s|[s.split("::").last, s]}
+        .field
+          = f.label :boxable_id, "Box name"
+          | &nbsp;&nbsp;
+          = select_box_name_by Box::BOXABLE_TYPES.first
+          = f.hidden_field :box_set_id, value: @box_set.id
+        .field
+          = f.label :expanded, "Expanded"
+          | &nbsp;&nbsp;
+          = f.select :expanded, [false, true]
+        .field.pull-right
+          = f.submit
