add hover border on linked box

--- a/app/assets/stylesheets/box.css.sass
+++ b/app/assets/stylesheets/box.css.sass
@@ -15,6 +15,10 @@
     height: 100%
     color: $color-font
 
+  &.route
+    &:hover
+      border: 1px solid #bbb
+
 #box-container
   position: relative
   margin-top: $header-height + 20px
