hide guest book if user access home page

--- a/app/views/home/_guest_book.slim
+++ b/app/views/home/_guest_book.slim
@@ -1,4 +1,4 @@
-#guest-book.hide
+#guest-book class = "#{'hide' if request.path == '/'}"
   #guest-bar.pointer
     | Comment with us
     i.icon-chevron-up.pull-right#toogle-guest
