add bootstrap-carousel plugin

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -4,6 +4,7 @@
 @import variables
 @import bootstrap-dropdown
 @import bootstrap-modal
+@import bootstrap-carousel
 @import bootstrap-alert
 
 // mixin 和布局
