Completed staff box new UI

--- a/app/assets/stylesheets/box_staff.css.sass
+++ b/app/assets/stylesheets/box_staff.css.sass
@@ -1,27 +1,33 @@
 .box-staff
-  &.box-expanded
+  .show-staff-details
+    right: 20px
+    bottom: 10px
+    font-size: 18px
+    position: absolute
+  /*&.box-expanded
     min-height: $box-height
     width: $box-width-3x
-    height: auto
-
+    height: auto*/
   .maxi
-    .staff-thumb
+    display: none
+    height: $box-height
+    width: $box-width
+    /*.staff-thumb
       top: 0
       right: 0
-      position: absolute
-
+      position: absolute*/
     h1
       margin: 15px 0
       float: left
       padding-right: 20px
       padding-top: 3px
       margin: 0px
-      font-size: 32px
+      font-size: 22px
       color: #555
       border-bottom: 0
 
     .staff-info-inner
-      height: 55px
+      height: 35px
       border-bottom: 1px solid #666
       padding-top: 10px
       padding-bottom: 5px
