--- a/app/views/common/_modals.slim
+++ b/app/views/common/_modals.slim
@@ -60,3 +60,12 @@
           = f.select :expanded, [false, true]
         .field.pull-right
           = f.submit
+
+#staffDetailsModal.modal.hide.fade tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"
+  .modal-header
+    a.pull-right.close.pointer data-dismiss="modal" aria-hidden="true" style="color:#ccc!important"
+      i.icon-remove
+    h3
+      | box name
+  .modal-body
+    | box description
