--- a/app/views/boxes/_staff.slim
+++ b/app/views/boxes/_staff.slim
@@ -1,4 +1,4 @@
-= box_tag box, expandable: true, expand_cols: 3 do
+= box_tag box do
   .mini
     .staff-thumb style="background-image: url('#{boxable.image_url}');"
       .staff-name = boxable.name
@@ -14,11 +14,12 @@
           - if boxable.quote?
             .staff-quote
               = "$#{boxable.quote}/hour"
-          - if boxable.signature?
-            .staff-signature
-              =raw boxable.signature
         .social-links
             = render 'boxes/staff_links', boxable: boxable
         .staff-description
-          = raw boxable.description
-      .staff-thumb style="background-image: url('#{boxable.second_image_url||boxable.image_url}');"
+          - if boxable.signature?
+              =raw boxable.signature
+      = link_to details_staffs_staff_path(boxable, box_id: box.id), class: "show-staff-details", remote: true do
+        | Show Staff Details
+      //a.show-staff-details data-toggle="modal" href="#staffDetailsModal"
+      //.staff-thumb style="background-image: url('#{boxable.second_image_url||boxable.image_url}');"
